
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/type.proto";

message so_account {
	prototype.account_name      name               =      1;
    prototype.time_point_sec    created_time       =      2;
    prototype.account_name      creator            =      3;
    prototype.coin              balance            =      4;
    prototype.vest              vest      =      5;
    uint32                      bp_vote_count      =      6;
    prototype.time_point_sec    last_vote_time      =      7;
    prototype.time_point_sec    last_post_time      =      8;
    uint32                      vote_power     =      9;
    uint32                      post_count     =      10;
    uint32                      created_trx_count     =      11;
    uint64                      next_powerdown_block_num     =      12;
    prototype.vest              each_powerdown_rate     =      13;
    prototype.vest              to_powerdown     =      14;
    prototype.vest              has_powerdown     =      15;
    prototype.public_key_type     pub_key                    =      16;
    uint64                      stamina             =      17;
    uint64                      stamina_use_block      =      18;
    uint64                      stamina_free         =      19;
    uint64                      stamina_free_use_block      =      20;
    prototype.vest              stake_vest     =      21;
    prototype.time_point_sec    last_stake_time      =      22;
    uint32                      reputation          =      23;
    string                      reputation_memo      =      24;
    uint32                      charged_ticket      =      25;
    uint32                      freeze          =      26;
    string                      freeze_memo      =      27;
      
}


message so_list_account_by_created_time {
	prototype.time_point_sec 	created_time   = 1;
	prototype.account_name   	name           = 2;
}


message so_list_account_by_balance {
	prototype.coin           	balance        = 1;
	prototype.account_name   	name           = 2;
}


message so_list_account_by_vest {
	prototype.vest           	vest  = 1;
	prototype.account_name   	name           = 2;
}


message so_list_account_by_bp_vote_count {
	uint32                   	bp_vote_count  = 1;
	prototype.account_name   	name           = 2;
}


message so_list_account_by_post_count {
	uint32                   	post_count = 1;
	prototype.account_name   	name           = 2;
}


message so_list_account_by_created_trx_count {
	uint32                   	created_trx_count = 1;
	prototype.account_name   	name           = 2;
}


message so_list_account_by_next_powerdown_block_num {
	uint64                   	next_powerdown_block_num = 1;
	prototype.account_name   	name           = 2;
}


message so_unique_account_by_name {
	prototype.account_name   	name           = 1;
}


message so_unique_account_by_pub_key {
	prototype.public_key_type  	pub_key                = 1;
	prototype.account_name   	name           = 2;
}
