
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/type.proto";
import "prototype/multi_id.proto";

message so_blockProducer {
	prototype.account_name            owner                        =      1;
    prototype.time_point_sec          created_time                 =      2;
    string                            url                          =      3;
    prototype.bp_vest_id              bp_vest                      =      4;
    prototype.public_key_type         signing_key                  =      5;
    uint64                            proposed_stamina_free        =      6;
    uint64                            tps_expected                 =      7;
    prototype.coin                    account_create_fee           =      8;
    uint32                            top_n_acquire_free_token     =      9;
    uint64                            epoch_duration               =      10;
    prototype.coin                    per_ticket_price             =      11;
    uint64                            per_ticket_weight            =      12;
    uint64                            voter_count                  =      13;
      
}


message so_mem_blockProducer_by_owner {
	prototype.account_name         	owner                    = 1;
}


message so_mem_blockProducer_by_created_time {
	prototype.time_point_sec       	created_time             = 1;
}


message so_mem_blockProducer_by_url {
	string                         	url                      = 1;
}


message so_mem_blockProducer_by_bp_vest {
	prototype.bp_vest_id           	bp_vest                  = 1;
}


message so_mem_blockProducer_by_signing_key {
	prototype.public_key_type      	signing_key              = 1;
}


message so_mem_blockProducer_by_proposed_stamina_free {
	uint64                         	proposed_stamina_free    = 1;
}


message so_mem_blockProducer_by_tps_expected {
	uint64                         	tps_expected             = 1;
}


message so_mem_blockProducer_by_account_create_fee {
	prototype.coin                 	account_create_fee       = 1;
}


message so_mem_blockProducer_by_top_n_acquire_free_token {
	uint32                         	top_n_acquire_free_token = 1;
}


message so_mem_blockProducer_by_epoch_duration {
	uint64                         	epoch_duration           = 1;
}


message so_mem_blockProducer_by_per_ticket_price {
	prototype.coin                 	per_ticket_price         = 1;
}


message so_mem_blockProducer_by_per_ticket_weight {
	uint64                         	per_ticket_weight        = 1;
}


message so_mem_blockProducer_by_voter_count {
	uint64                         	voter_count              = 1;
}


message so_list_blockProducer_by_owner {
	prototype.account_name         	owner                    = 1;
}


message so_list_blockProducer_by_bp_vest {
	prototype.bp_vest_id           	bp_vest                  = 1;
	prototype.account_name         	owner                    = 2;
}


message so_unique_blockProducer_by_owner {
	prototype.account_name         	owner                    = 1;
}
